Refactor Service and Utils